Opened 14 years ago

Closed 9 years ago

#5554 closed bug (fixed)

[registrar] crash in ui_color ()

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hey registrar '_ABR'



Tested with hrev35795 in VirtualBox 3.0.12

Attachments (1)

registrar.png (11.4 KB ) - added by diver 14 years ago.

Download all attachments as: .zip

Change History (4)

by diver, 14 years ago

Attachment: registrar.png added

comment:1 by diver, 14 years ago

hey net_server '_ABR' crashes the same way :-)

comment:2 by bonefish, 14 years ago

Component: Servers/registrarKits/Interface Kit
Owner: changed from bonefish to axeld

BApplication must not do any GUI stuff until the GUI context is initialized.

comment:3 by pulkomandy, 9 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev48368 by removing the default AboutRequestd implementation which shouldn't be there.

Note: See TracTickets for help on using tickets.