BApplication: remove AboutRequested implementation

The Be Book says this is a hook method, so the default behavior should
be to do nothing (didn't test BeOS, my install is currently broken).

Showing an alert with just the application thread name is less than
helpful anyway, and this was causing crashes.

Fixes #5554.