src/kits/app/Application.cpp
@@ -730,12 +730,7 @@ BApplication::RefsReceived(BMessage* message)
 void
 BApplication::AboutRequested()
 {
-	thread_info info;
-	if (get_thread_info(Thread(), &info) == B_OK) {
-		BAlert* alert = new BAlert("_about_", info.name, "OK");
-		alert->SetFlags(alert->Flags() | B_CLOSE_ON_ESCAPE);
-		alert->Go(NULL);
-	}
+	// supposed to be implemented by subclasses
 }
 
 
